tests/semantic_errors/andrei28_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local str : string = "home"
    local int : integer = 100
    local dec : number = 190.432
    local nil_var : nil

    local id : string = dec//dec
end

main()
